tests/fixtures/invalid/pow_bool_none_list.py
# Cannot call pow() with Bool, None, List[int]
x = pow(True, None, [1, 2, 3])
